# physical-ai-and-humanoid-robotics-book

./: .dockerignore  .env.example  .gitignore  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_STATUS.md  FINAL_VALIDATION.md  IMPLEMENTATION_SUMMARY.md  SETUP_DEPLOY_GUIDE.md  VALIDATION_REPORT.md  combined_server.py  docusaurus.config.ts  nginx.conf  package-lock.json  package.json  pyproject.toml  railway.toml  server.js  simple_server.py  start.sh  start_server.py  tsconfig.json  vercel.json
.claude/: settings.local.json
.claude/commands/agents/: chatkit-expert.md  core-orchestrator.md  writing-expert.md
.specify/contexts/: claude-agent-context.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  README.md  __init__.py  api_documentation.md  check_qdrant_methods.py  check_query_signature.py  deploy.sh  docker-compose.yml  find_vector_search_methods.py  ingest_with_retry.py  k8s-deployment.yaml  main.py  pyproject.toml  railway.toml  requirements-prod.txt  requirements.txt  start.bat  start.sh  test_api_endpoints.py  test_backend_structure.py  test_qdrant.py  test_qdrant_search.py  test_updated_qdrant.py  test_with_real_content.py
backend/src/api/: chat.py  chat_api.py  health.py  health_api.py  ingestion.py  main.py  search.py
backend/src/config/: database.py  qdrant_config.py  settings.py
backend/src/database/: __init__.py  crud.py  database.py
backend/src/middleware/: rate_limit.py
backend/src/models/: chat.py  content.py  database.py  document.py  document_chunk.py  error.py  ingestion.py  ingestion_job.py  message.py  query.py  session.py  vector_embedding.py
backend/src/schemas/: __init__.py  content.py  query.py  selection_context.py  session.py  status.py
backend/src/scripts/: ingest_docs.py  initialize_vector_db.py
backend/src/services/: chat_service.py  embedding_service.py  gemini_service.py  ingestion_service.py  openai_client.py  openai_service.py  qdrant_service.py  rag_service.py  vector_db_service.py
backend/src/utils/: cache.py  error_handler.py  errors.py  file_parser.py  logging.py  logging_config.py  metrics.py  monitoring.py  text_splitter.py  validation.py
backend/tests/integration/: conftest.py  test_chat.py  test_chatbot_api.py  test_chatbot_ui.py  test_e2e.py  test_error_scenarios.py  test_ingestion.py  test_monitoring_logging.py  test_rag_functionality.py  test_rag_integration.py  test_search.py  test_selected_text_functionality.py  test_user_story_validation.py
backend/tests/unit/: test_rag_service.py
book-source/: docusaurus.config.ts  package-lock.json  sidebars.ts
book-source/docs/: accessibility-statement.md  cross-browser-compatibility.md  intro.md  performance-optimization.md  quality-assurance.md
book-source/docs/module-1-ros2/: index.md
book-source/docs/module-3-nvidia-isaac/: index.md  outcomes.md
book-source/docs/module-4-vla/: capstone.md  index.md
book-source/src/components/: CodePlayground.tsx  CommandLine.tsx  ProgressIndicator.tsx  ProgressTracker.tsx  RobotScene.tsx  RoboticsCapabilities.tsx  SimulationResult.tsx  Troubleshooting.tsx
book-source/src/pages/: index.module.css
docs/: chatbot-integration.md  glossary.md  prerequisites.md  references.md
docs/module-1-ros2/: outcomes.md
docs/module-1-ros2/concepts/: ros2-middleware.md  urdf.md
docs/module-1-ros2/workflows/: launch-files.md  rclpy-integration.md
docs/module-2-digital-twin/: index.md  outcomes.md
docs/module-2-digital-twin/concepts/: gazebo-physics.md
docs/module-2-digital-twin/examples/: sensor-data-visualization.md  unity-robot-control.md
docs/module-2-digital-twin/workflows/: sensor-integration.md
docs/module-3-nvidia-isaac/concepts/: nav2-path-planning.md  rl-sim-to-real.md
docs/module-3-nvidia-isaac/examples/: rl-walk-cycle.md  vslam-implementation.md
docs/module-4-vla/: outcomes.md
history/adr/: 001-rag-architecture-pattern.md
specs/1-physical-ai-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-qdrant-cloud-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-chatbot-docusaurus/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/3-docusaurus-docs-plan/: spec.md
specs/4-fix-rag-chatbot-docusaurus/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/5-switch-gemini-embeddings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/6-fix-book-content-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/components/: ResponsiveLayout.tsx
src/components/RagChatbot/: Message.tsx  (+4 more)
src/css/: rag-chatbot.css
src/pages/: index.module.css  index.tsx
src/utils/: validation.ts
(+86 files in other folders)
